--- a/css/styles.css
+++ b/css/styles.css
@@ -6,23 +6,23 @@ body{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-size: 62.5%;
+    /* font-size: 62.5%; */
     font-family: 'Urbanist', sans-serif;
 }
 
-.nav-link {
+/* .nav-link {
     font-size: 100%;
-}
+} */
 
 h1 {
-    font-size: 5.4rem;
+    font-size: 5rem;
     color: #fff;
-    margin-bottom: 5rem;
+    margin-bottom: 4.4rem;
 }
 
 h2 {
-    font-size: 4.2rem;
-    margin-bottom: 4rem;
+    font-size: 3.9rem;
+    margin-bottom: 3.8rem;
 }
 
 .container {
@@ -47,7 +47,7 @@ h2 {
 }
 
 .btn { 
-    font-size: 2.4rem;
+    font-size: 2.2rem;
     padding: 2rem 0;
     width: 30rem;
     text-align: center;
@@ -56,4 +56,17 @@ h2 {
     color: rgb(28,26,26);
     background: linear-gradient(90deg, rgb(18,92,255) 0%, rgb(0,10,255) 100%);
     border-radius: 4px;
+}
+
+.btn:hover {
+    cursor: pointer;
+    box-shadow: 0 0.4rem 1.4rem 0 rgba(8,115,244,0.6);
+    transition: transform 150ms;
+    transform:scale(1.03);
+}
+
+.btn[:disabled]:hover {
+    cursor: not-allowed;
+    box-shadow: none;
+    transform: none;
 }
