--- a/css/styles.css
+++ b/css/styles.css
@@ -46,6 +46,18 @@ h2 {
     align-items: center;
 }
 
+.justify-center {
+    justify-content: center;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.hidden {
+    display: none;
+}
+
 .btn { 
     font-size: 2.2rem;
     padding: 2rem 0;
